Created shell for report based on KTH template

--- a/Thesis report/examplethesis.tex
+++ b/Thesis report/examplethesis.tex
@@ -72,20 +72,52 @@ command \texttt{parencite} to get a reference in parenthesis, like this
 as part of the sentence using \texttt{textcite}, like talking about
 the work of \textcite{einstein2016}.
 
-\Blindtext
-
-\section{Research Question}
+\section{Problemformulering}
+Detta är problemformuleringen.
 
 \blindtext
 
-\chapter{Methods}
+\section{Målsättning}
+Detta är målsättningen.
+
+\blindtext
+
+\section{Avgränsningar}
+Detta är avgränsningarna.
+
+\blindtext
+
+\section{Författarnas bidrag till examensarbetet}
+Detta är författarnas bidrag till examensarbetet.
+
+\blindtext
+
+
+\chapter{Teori och bakgrund}
 
 \blindtext
 
 \printbibliography[heading=bibintoc] % Print the bibliography (and make it appear in the table of contents)
 
-\appendix
+\chapter{Metoder och resultat}
+Metoder och resultat text
+\blindtext
 
-\chapter{Unnecessary Appended Material}
+
+\chapter{Analys och diskussion}
+Analys och diskussion
+\blindtext
+
+
+\chapter{Slutsatser}
+Slutsatser
+\blindtext
+
+\chapter{Källförteckning}
+Källförteckningen.
+
+
+\chapter{Bilagor}
+
 
 \end{document}
