--- a/Thesis report/examplethesis.tex
+++ b/Thesis report/examplethesis.tex
@@ -22,7 +22,7 @@
 
 \title{This is the English title}
 \alttitle{Detta är den svenska översättningen av titeln}
-\author{Osquar Student}
+\author{Osquar Studnt}
 \email{osquar@kth.se}
 \supervisor{Lotta Larsson}
 \examiner{Lennart Bladgren}
