--- a/Thesis report/examplethesis.tex
+++ b/Thesis report/examplethesis.tex
@@ -172,16 +172,19 @@ Något som också är viktigt att tänka på då användarens förståelse av da
 
 En ganska stor del av befolkningen är färgblinda, vilket betyder att de kan ha svårt att urskilja alla eller vissa färger [12]. Det är en utmaning att kunna skapa teknologiska produkter som ska kunna användas även av människor med detta handikapp [10]. Detta kan göras genom att undvika vissa färgkombinationer, där rött och grönt är de vanligaste kombinationerna som människor är färgblinda för.
 
+
 \subsection{UX-designprocess}
+
+
+Inom begreppet MDI tillhör interaktionsdesign som har som mål att öka människors förståelse över vad som kan göras, vad som sker och vad som precis hänt. För att kunna göra detta och försäkra en positiv användarupplevelse av produkten som designas så ska principer inom psykologi, design, konst och känsla följas. Kraven inom detta område är att försäkra att människors behov är mötta, att den resulterande produkten är förståelig, lätt och naturlig att använda och det ska vara svårt att göra fel. Dessutom ska användaren kunna utföra önskade uppgifter och upplevelsen ska vara positiv och njutningsbar för användaren.           
+
 \captionsetup[figure]{name=Figur}
 
-\begin{figure}
-\center
+\begin{figure}[h]
+\centering
 \includegraphics[width=0.5\textwidth]{PrototypeCreation}
 \caption{Redogörelse för de fyra stegen för optimal design.}
 \end{figure}
-
-Inom begreppet MDI tillhör interaktionsdesign som har som mål att öka människors förståelse över vad som kan göras, vad som sker och vad som precis hänt. För att kunna göra detta och försäkra en positiv användarupplevelse av produkten som designas så ska principer inom psykologi, design, konst och känsla följas. Kraven inom detta område är att försäkra att människors behov är mötta, att den resulterande produkten är förståelig, lätt och naturlig att använda och det ska vara svårt att göra fel. Dessutom ska användaren kunna utföra önskade uppgifter och upplevelsen ska vara positiv och njutningsbar för användaren.           
 
 Enligt upphovsmannen till UX, Donald Norman [13] består människa-centrerad designprocess av fyra steg som itereras enligt figur 2.1. I boken “The design of everyday things” [14] tas det upp att denna metod brukar även kallas för “the spiral method” och syftar på att leverera framsteg vid varje iteration. Dessa fyra steg är: 
 
