Added two subsections in chapter 3

--- a/Thesis report/examplethesis.tex
+++ b/Thesis report/examplethesis.tex
@@ -282,8 +282,20 @@ I Kibana finns även utvecklarverktyg som erbjuder kraftfulla sätt att interage
 
 
 \chapter{Metod}
-Metoder och resultat text
-\blindtext
+I detta kapitel presenteras vilka metoder som användes för att uppfylla målen definierade i 1.2.
+
+\section{Litteraturstudie}
+För att identifiera utmaningar i den traditionella designprocessen genomfördes en litteraturstudie under förstudien. Detta för att ta reda på vad som skulle stå i fokus under utvärderingen av designprocessen som skulle bli framtagen med Kibana. Under förstudien genomfördes även en litteraturstudie för att ta reda på svårigheter inom visualisering för att kunna välja en typ av data som har visualiseringsutmaningar. Litteraturstudien utfördes genom analyser av relaterade arbeten och rapporter.
+
+\section{Utvärdering av UX-designprocessen vid användning av Kibana}
+
+Efter att produkten tagits fram och UX-designprocessen specificerats gjordes en utvärdering av UX-designprocessen. Denna utvärdering utfördes av UX-designers via ett formulär där hela UX-designprocessen och Kibana beskrevs. I formuläret skulle sedan påståenden besvaras angående olika aspekter av UX-designprocessen i Kibana såsom begränsningar och särskilda funktioner. Erfarna UX-designers var vana vid att arbeta enligt den traditionella UX-designprocessen och ansågs därför som lämpliga kandidater för undersökningen. En erfaren UX-designer definierade projektdeltagarna som en person som hade tre år eller mer erfarenhet av att arbeta med design. Formuläret skickades ut till 32 kandidater genom deras profiler på LinkedIn och det kan hittas i appendix.
+
+Det som utvärderingen fokuserade på var svårigheter inom UX-designprocessen, främst det tredje steget, prototypskapande och det fjärde, testning. Inom skapandet av prototypen fanns det svårigheter vid att få prototypen och slutprodukten att vara lika främst gällande det visuella, innehållet, interaktionen och funktionaliteten eftersom utvecklare och designers använde olika verktyg. Ändringar som skulle göras på designen kunde även komma att bli kostsamma och därför lade utvärderingen även fokus på optimering av ändring av användargränssnittet. Vid testningen var det en del faktorer som försvårade att testa den riktiga funktionaliteten på produkten, bland annat att det var väldigt tidskrävande och att designers inte alltid visste systemets begränsningar. 
+
+\section{Utvärdering av kommunikationen mellan Agila utvecklare och UX-designers under UX-designprocessen vid användning av Kibana}
+
+En utvärdering gjordes även av kommunikationen mellan Agila utvecklare och UX-designers eftersom det har visat sig vara en svårighet. Under projektets gång fick projektdeltagarna erfarenhet av båda rollerna eftersom de dels skapade systemet och designen till dashboarden. Utvärderingen gjordes genom en analys av tankar, erfarenheter och noteringar som gjorts av projektdeltagarna under projektets gång. 
 
 
 \begin{figure}[h]
